# corvo

./: .gitignore  .gitmodules  README.md  bld.bat  build.sh  environment.yml  main.py  meta.yaml  pyproject.toml  requirements.txt  setup.py
corvo/: bld.bat  meta.yaml
corvolauncher/: _version.py
corvolauncher/gui/: dataset_fetcher.py  qt_confirm_popup.py  qt_corvo_launcher.py  qt_dataset_select.py  qt_dataset_sidebar.py  qt_file_display.py  qt_launch_menu.py  qt_launch_window.py  qt_line_break.py  qt_main_window.py  qt_process_menu.py  qt_sidebar.py  worker.py
corvolauncher/gui/job_runners/: anndata_worker.py  cellxgene_worker.py  download_workers.py  generic_worker.py  jar_worker.py  processing_worker.py  worker_signals.py
corvolauncher/utilities/: cellxgene_JSON_requests.py  cellxgene_scrape.py  complete_process.py  jar_launch.py  pre_process.py  quick_launcher.py  scanpy_preprocess.py  speech_model_scrape.py  startup.py  task_manager.py  vr_jar_launch.py
file_conversion/: file_converter.py  file_converter_test_2d.py  pandas_reindex.py  selections_to_csv.py  sparse_storage.py
recipes/: bld.bat  build.sh  meta.yaml
src/corvolauncher/gui/: qt_speech_model_select.py
src/corvolauncher/gui/job_runners/: anndata_worker.py  worker_signals.py
src/corvolauncher/utilities/: cellxgene_scrape.py  h5ad_to_csv.py  speech_model_scrape.py  vr_jar_launch.py
